Closed Bug 1485369 Opened 7 years ago Closed 7 years ago

Perma-failure in builds/worker/workspace/build/tests/reftest/tests/editor/txmgr/tests/crashtests/407072-1.html when Gecko 63 merges to Beta on 2018-08-27

Categories

(Core :: DOM: Editor, defect, P1)

defect

Tracking

()

VERIFIED FIXED
mozilla63
Tracking Status
firefox-esr52 --- unaffected
firefox-esr60 --- unaffected
firefox61 --- unaffected
firefox62 --- unaffected
firefox63 + verified

People

(Reporter: noemi_erli, Assigned: masayuki)

References

Details

Attachments

(2 files)

[Tracking Requested - why for this release]: [Tracking Requested - why for this release]: Central as Beta: https://treeherder.mozilla.org/#/jobs?repo=try&revision=7429f911846f39f57bcae66512acc4596173ec10&filter-resultStatus=testfailed&filter-resultStatus=busted&filter-resultStatus=exception&filter-resultStatus=retry&filter-resultStatus=usercancel&filter-resultStatus=runnable&selectedJob=195282058 Failure log: https://treeherder.mozilla.org/logviewer.html#?job_id=195282058&repo=try&lineNumber=58150 Analyzer: https://hg.mozilla.org/mozilla-central/raw-file/tip/layout/tools/reftest/reftest-analyzer.xhtml#logurl=https://queue.taskcluster.net/v1/task/P2jUH_xjTTaNuYGd_2c2lg/runs/0/artifacts/public/logs/live_backing.log&only_show_unexpected=1&only_show_unexpected=1 [task 2018-08-22T12:37:56.141Z] 12:37:56 INFO - REFTEST TEST-START | file:///builds/worker/workspace/build/tests/reftest/tests/editor/txmgr/tests/crashtests/407072-1.html [task 2018-08-22T12:37:56.158Z] 12:37:56 INFO - REFTEST TEST-LOAD | file:///builds/worker/workspace/build/tests/reftest/tests/editor/txmgr/tests/crashtests/407072-1.html | 1034 / 3591 (28%) [task 2018-08-22T12:37:56.180Z] 12:37:56 INFO - ++DOMWINDOW == 20 (0xb819e800) [pid = 1111] [serial = 4943] [outer = 0xf70d1160] [task 2018-08-22T12:37:56.209Z] 12:37:56 INFO - [Child 1111, Main Thread] WARNING: HTMLEditRules::BeforeEdit() failed to handle something: 'NS_SUCCEEDED(rv)', file /builds/worker/workspace/build/src/editor/libeditor/HTMLEditor.cpp, line 3600 [task 2018-08-22T12:37:56.210Z] 12:37:56 INFO - [Child 1111, Main Thread] WARNING: '!aSelection->RangeCount()', file /builds/worker/workspace/build/src/editor/libeditor/EditorBase.cpp, line 3912 [task 2018-08-22T12:37:56.215Z] 12:37:56 INFO - [Child 1111, Main Thread] WARNING: '!selectionStartPoint.IsSet()', file /builds/worker/workspace/build/src/editor/libeditor/HTMLEditRules.cpp, line 10245 [task 2018-08-22T12:37:56.215Z] 12:37:56 INFO - [Child 1111, Main Thread] WARNING: Failed to normalize Selection: 'NS_SUCCEEDED(rv)', file /builds/worker/workspace/build/src/editor/libeditor/HTMLEditRules.cpp, line 470 [task 2018-08-22T12:37:56.217Z] 12:37:56 INFO - [Child 1111, Main Thread] WARNING: '!aNode', file /builds/worker/workspace/build/src/editor/libeditor/EditorBase.cpp, line 3801 [task 2018-08-22T12:37:56.219Z] 12:37:56 INFO - [Child 1111, Main Thread] WARNING: 'pointToInsert.GetChild() == host', file /builds/worker/workspace/build/src/editor/libeditor/HTMLEditRules.cpp, line 9100 [task 2018-08-22T12:37:56.223Z] 12:37:56 INFO - [Child 1111, Main Thread] WARNING: 'splitNodeResult.Failed()', file /builds/worker/workspace/build/src/editor/libeditor/HTMLEditRules.cpp, line 6152 [task 2018-08-22T12:37:56.226Z] 12:37:56 INFO - [Child 1111, Main Thread] WARNING: 'NS_FAILED(rv)', file /builds/worker/workspace/build/src/editor/libeditor/HTMLEditRules.cpp, line 6069 [task 2018-08-22T12:37:56.229Z] 12:37:56 INFO - [Child 1111, Main Thread] WARNING: '!aNode', file /builds/worker/workspace/build/src/editor/libeditor/EditorBase.cpp, line 3801 [task 2018-08-22T12:37:56.233Z] 12:37:56 INFO - [Child 1111, Main Thread] WARNING: 'pointToInsert.GetChild() == host', file /builds/worker/workspace/build/src/editor/libeditor/HTMLEditRules.cpp, line 9100 [task 2018-08-22T12:37:56.234Z] 12:37:56 INFO - [Child 1111, Main Thread] WARNING: 'splitNodeResult.Failed()', file /builds/worker/workspace/build/src/editor/libeditor/HTMLEditRules.cpp, line 6152 [task 2018-08-22T12:37:56.235Z] 12:37:56 INFO - [Child 1111, Main Thread] WARNING: 'NS_FAILED(rv)', file /builds/worker/workspace/build/src/editor/libeditor/HTMLEditRules.cpp, line 6069 [task 2018-08-22T12:37:56.237Z] 12:37:56 INFO - [Child 1111, Main Thread] WARNING: '!aContent', file /builds/worker/workspace/build/src/editor/libeditor/HTMLAnonymousNodeEditor.cpp, line 260 [task 2018-08-22T12:37:56.239Z] 12:37:56 INFO - [Child 1111, Main Thread] WARNING: HideResizers() failed: 'NS_SUCCEEDED(rv)', file /builds/worker/workspace/build/src/editor/libeditor/HTMLAnonymousNodeEditor.cpp, line 298 [task 2018-08-22T12:37:56.245Z] 12:37:56 INFO - [Child 1111, Main Thread] ###!!! ASSERTION: HideResizers failed: '!mResizedObject', file /builds/worker/workspace/build/src/editor/libeditor/HTMLAnonymousNodeEditor.cpp, line 299 [task 2018-08-22T12:37:56.246Z] 12:37:56 INFO - #01: mozilla::HTMLEditor::HideAnonymousEditingUIs() [editor/libeditor/HTMLAnonymousNodeEditor.cpp:299] [task 2018-08-22T12:37:56.247Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.248Z] 12:37:56 INFO - #02: mozilla::HTMLEditor::PreDestroy(bool) [editor/libeditor/HTMLEditor.cpp:406] [task 2018-08-22T12:37:56.249Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.249Z] 12:37:56 INFO - #03: nsDocShellEditorData::TearDownEditor() [mfbt/RefPtr.h:79] [task 2018-08-22T12:37:56.250Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.251Z] 12:37:56 INFO - #04: nsDocShellEditorData::~nsDocShellEditorData() [mfbt/RefPtr.h:79] [task 2018-08-22T12:37:56.252Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.253Z] 12:37:56 INFO - #05: nsAutoPtr<nsDocShellEditorData>::assign(nsDocShellEditorData*) [memory/mozalloc/mozalloc.h:160] [task 2018-08-22T12:37:56.254Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.256Z] 12:37:56 INFO - #06: nsSHEntryShared::DropPresentationState() [mfbt/RefPtr.h:42] [task 2018-08-22T12:37:56.257Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.258Z] 12:37:56 INFO - #07: nsSHEntryShared::SetContentViewer(nsIContentViewer*) [docshell/shistory/nsSHEntryShared.cpp:145] [task 2018-08-22T12:37:56.260Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.261Z] 12:37:56 INFO - #08: nsSHEntry::SetContentViewer(nsIContentViewer*) [docshell/shistory/nsSHEntry.cpp:202] [task 2018-08-22T12:37:56.263Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.264Z] 12:37:56 INFO - #09: nsSHistory::EvictContentViewerForTransaction(nsISHTransaction*) [docshell/shistory/nsSHistory.cpp:228] [task 2018-08-22T12:37:56.267Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.269Z] 12:37:56 INFO - #10: nsSHistory::EvictOutOfRangeWindowContentViewers(int) [xpcom/base/nsCOMPtr.h:463] [task 2018-08-22T12:37:56.270Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.271Z] 12:37:56 INFO - #11: non-virtual thunk to nsSHistory::EvictOutOfRangeContentViewers(int) [docshell/shistory/nsSHistory.cpp:1064] [task 2018-08-22T12:37:56.271Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.275Z] 12:37:56 INFO - #12: nsDocumentViewer::Show() [layout/base/nsDocumentViewer.cpp:2259] [task 2018-08-22T12:37:56.277Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.277Z] 12:37:56 INFO - #13: nsPresContext::EnsureVisible() [layout/base/nsPresContext.cpp:0] [task 2018-08-22T12:37:56.278Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.279Z] 12:37:56 INFO - #14: mozilla::PresShell::UnsuppressAndInvalidate() [layout/base/PresShell.cpp:3960] [task 2018-08-22T12:37:56.279Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.280Z] 12:37:56 INFO - #15: nsDocumentViewer::LoadComplete(nsresult) [layout/base/nsDocumentViewer.cpp:1208] [task 2018-08-22T12:37:56.281Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.282Z] 12:37:56 INFO - #16: nsDocShell::EndPageLoad(nsIWebProgress*, nsIChannel*, nsresult) [docshell/base/nsDocShell.cpp:7055] [task 2018-08-22T12:37:56.282Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.283Z] 12:37:56 INFO - #17: nsDocShell::OnStateChange(nsIWebProgress*, nsIRequest*, unsigned int, nsresult) [docshell/base/nsDocShell.cpp:6848] [task 2018-08-22T12:37:56.284Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.285Z] 12:37:56 INFO - #18: non-virtual thunk to nsDocShell::OnStateChange(nsIWebProgress*, nsIRequest*, unsigned int, nsresult) [docshell/base/nsDocShell.cpp:0] [task 2018-08-22T12:37:56.285Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.286Z] 12:37:56 INFO - #19: nsDocLoader::DoFireOnStateChange(nsIWebProgress*, nsIRequest*, int&, nsresult) [uriloader/base/nsDocLoader.cpp:1309] [task 2018-08-22T12:37:56.287Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.288Z] 12:37:56 INFO - #20: nsDocLoader::doStopDocumentLoad(nsIRequest*, nsresult) [uriloader/base/nsDocLoader.cpp:852] [task 2018-08-22T12:37:56.289Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.290Z] 12:37:56 INFO - #21: nsDocLoader::DocLoaderIsEmpty(bool) [mfbt/RefPtr.h:320] [task 2018-08-22T12:37:56.291Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.292Z] 12:37:56 INFO - #22: nsDocLoader::OnStopRequest(nsIRequest*, nsISupports*, nsresult) [uriloader/base/nsDocLoader.cpp:628] [task 2018-08-22T12:37:56.293Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.294Z] 12:37:56 INFO - #23: non-virtual thunk to nsDocLoader::OnStopRequest(nsIRequest*, nsISupports*, nsresult) [uriloader/base/nsDocLoader.cpp:0] [task 2018-08-22T12:37:56.295Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.297Z] 12:37:56 INFO - #24: mozilla::net::nsLoadGroup::RemoveRequest(nsIRequest*, nsISupports*, nsresult) [netwerk/base/nsLoadGroup.cpp:629] [task 2018-08-22T12:37:56.299Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.301Z] 12:37:56 INFO - #25: nsIDocument::DoUnblockOnload() [dom/base/nsDocument.cpp:8297] [task 2018-08-22T12:37:56.302Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.302Z] 12:37:56 INFO - #26: nsDocument::UnblockOnload(bool) [dom/base/nsDocument.cpp:8217] [task 2018-08-22T12:37:56.303Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.304Z] 12:37:56 INFO - #27: nsIDocument::DispatchContentLoadedEvents() [dom/base/nsDocument.cpp:5089] [task 2018-08-22T12:37:56.306Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.307Z] 12:37:56 INFO - #28: mozilla::detail::RunnableMethodImpl<nsIDocument*, void (nsIDocument::*)(), true, (mozilla::RunnableKind)0>::Run() [xpcom/threads/nsThreadUtils.h:1222] [task 2018-08-22T12:37:56.308Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.309Z] 12:37:56 INFO - #29: mozilla::SchedulerGroup::Runnable::Run() [xpcom/base/nsCOMPtr.h:396] [task 2018-08-22T12:37:56.310Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.311Z] 12:37:56 INFO - #30: nsThread::ProcessNextEvent(bool, bool*) [mfbt/Atomics.h:576] [task 2018-08-22T12:37:56.312Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.314Z] 12:37:56 INFO - #31: NS_ProcessNextEvent(nsIThread*, bool) [xpcom/threads/nsThreadUtils.cpp:519] [task 2018-08-22T12:37:56.315Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.316Z] 12:37:56 INFO - #32: mozilla::ipc::MessagePump::Run(base::MessagePump::Delegate*) [ipc/glue/MessagePump.cpp:98] [task 2018-08-22T12:37:56.316Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.318Z] 12:37:56 INFO - #33: MessageLoop::RunInternal() [ipc/chromium/src/base/message_loop.cc:326] [task 2018-08-22T12:37:56.319Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.323Z] 12:37:56 INFO - #34: MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:598] [task 2018-08-22T12:37:56.324Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.325Z] 12:37:56 INFO - #35: nsBaseAppShell::Run() [widget/nsBaseAppShell.cpp:160] [task 2018-08-22T12:37:56.326Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.327Z] 12:37:56 INFO - #36: XRE_RunAppShell() [toolkit/xre/nsEmbedFunctions.cpp:944] [task 2018-08-22T12:37:56.327Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.328Z] 12:37:56 INFO - #37: mozilla::ipc::MessagePumpForChildProcess::Run(base::MessagePump::Delegate*) [ipc/glue/MessagePump.cpp:269] [task 2018-08-22T12:37:56.329Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.330Z] 12:37:56 INFO - #38: MessageLoop::RunInternal() [ipc/chromium/src/base/message_loop.cc:326] [task 2018-08-22T12:37:56.330Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.331Z] 12:37:56 INFO - #39: MessageLoop::Run() [ipc/chromium/src/base/message_loop.cc:598] [task 2018-08-22T12:37:56.331Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.332Z] 12:37:56 INFO - #40: XRE_InitChildProcess(int, char**, XREChildData const*) [toolkit/xre/nsEmbedFunctions.cpp:774] [task 2018-08-22T12:37:56.333Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.334Z] 12:37:56 INFO - #41: mozilla::BootstrapImpl::XRE_InitChildProcess(int, char**, XREChildData const*) [toolkit/xre/Bootstrap.cpp:69] [task 2018-08-22T12:37:56.334Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.335Z] 12:37:56 INFO - #42: main [ipc/contentproc/plugin-container.cpp:50] [task 2018-08-22T12:37:56.336Z] 12:37:56 INFO - [task 2018-08-22T12:37:56.337Z] 12:37:56 INFO - [Child 1111, Main Thread] WARNING: NS_ENSURE_TRUE(frame) failed: file /builds/worker/workspace/build/src/dom/events/ContentEventHandler.cpp, line 1401 [task 2018-08-22T12:37:56.338Z] 12:37:56 INFO - [Child 1111, Main Thread] WARNING: NS_ENSURE_TRUE(frame) failed: file /builds/worker/workspace/build/src/dom/events/ContentEventHandler.cpp, line 1401 [task 2018-08-22T12:37:56.339Z] 12:37:56 INFO - [Child 1111, Main Thread] WARNING: '!textRects.mSucceeded', file /builds/worker/workspace/build/src/widget/ContentCache.cpp, line 315 [task 2018-08-22T12:37:56.341Z] 12:37:56 INFO - [Child 1111, Main Thread] WARNING: '!QueryCharRectArray(aWidget, startOffset, length, rects)', file /builds/worker/workspace/build/src/widget/ContentCache.cpp, line 379 [task 2018-08-22T12:37:56.342Z] 12:37:56 INFO - [Child 1111, Main Thread] WARNING: NS_ENSURE_TRUE(frame) failed: file /builds/worker/workspace/build/src/dom/events/ContentEventHandler.cpp, line 1401 [task 2018-08-22T12:37:56.342Z] 12:37:56 INFO - [Child 1111, Main Thread] WARNING: NS_ENSURE_TRUE(frame) failed: file /builds/worker/workspace/build/src/dom/events/ContentEventHandler.cpp, line 1401 [task 2018-08-22T12:37:56.343Z] 12:37:56 INFO - [Child 1111, Main Thread] WARNING: '!textRects.mSucceeded', file /builds/worker/workspace/build/src/widget/ContentCache.cpp, line 315 [task 2018-08-22T12:37:56.345Z] 12:37:56 INFO - [Child 1111, Main Thread] WARNING: '!QueryCharRectArray(aWidget, startOffset, length, rects)', file /builds/worker/workspace/build/src/widget/ContentCache.cpp, line 379 [task 2018-08-22T12:37:56.346Z] 12:37:56 INFO - [Child 1111, Main Thread] WARNING: NS_ENSURE_SUCCESS(rv, rv) failed with result 0x80004005: file /builds/worker/workspace/build/src/dom/base/nsContentUtils.cpp, line 4007 [task 2018-08-22T12:37:56.356Z] 12:37:56 INFO - REFTEST TEST-PASS | file:///builds/worker/workspace/build/tests/reftest/tests/editor/txmgr/tests/crashtests/407072-1.html | (LOAD ONLY) [task 2018-08-22T12:37:56.357Z] 12:37:56 INFO - REFTEST TEST-END | file:///builds/worker/workspace/build/tests/reftest/tests/editor/txmgr/tests/crashtests/407072-1.html [task 2018-08-22T12:37:56.374Z] 12:37:56 INFO - ++DOMWINDOW == 21 (0xb8198800) [pid = 1111] [serial = 4944] [outer = 0xf70d1160] [task 2018-08-22T12:37:56.396Z] 12:37:56 INFO - REFTEST TEST-UNEXPECTED-FAIL | file:///builds/worker/workspace/build/tests/reftest/tests/editor/txmgr/tests/crashtests/407072-1.html | assertion count 1 is more than expected 0 assertions
Flags: needinfo?(masayuki)
Must be a regression of bug 1484110.
Assignee: nobody → masayuki
Blocks: 1484110
Status: NEW → ASSIGNED
Flags: needinfo?(masayuki)
Priority: -- → P1
Oddly, on 63 Beta simulation, nsIDocument::GetWindow() may return nullptr when HTMLEditor is being destroyed by unload of the page. I'm not sure if this is an expected change. However, HTMLEditor::HideResizers() should not stop cleaning up even if it meets unexpected situation. Additionally, this patch moves all HTMLEditor members related to resizers to local variables since while HideResizers() is cleaning up old resizers, the members may be overwritten by ShowResizers() if mutation event listener or something does something.
Comment on attachment 9003391 [details] Bug 1485369 - part 0: Clean up HTMLEditor::HideResizers() Makoto Kato [:m_kato] has approved the revision.
Attachment #9003391 - Flags: review+
Comment on attachment 9003392 [details] Bug 1485369 - part 1: HTMLEditor::HideResizers() should not stop cleaning up even if there is no window Makoto Kato [:m_kato] has approved the revision.
Attachment #9003392 - Flags: review+
Pushed by masayuki@d-toybox.com: https://hg.mozilla.org/integration/autoland/rev/4ca06c8731d3 part 0: Clean up HTMLEditor::HideResizers() r=m_kato
Pushed by masayuki@d-toybox.com: https://hg.mozilla.org/integration/autoland/rev/043aff7fda61 part 1: HTMLEditor::HideResizers() should not stop cleaning up even if there is no window r=m_kato
Status: ASSIGNED → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: