Bug 1485369 - part 0: Clean up HTMLEditor::HideResizers() r=m_kato

Differential Revision: https://phabricator.services.mozilla.com/D4056